# xxpdump-rs

./: .gitignore  2026-01-19-command-messageinitcommand-message.txt  CLAUDE.md  Cargo.toml  README.md  test_daemon.sh
docs/plans/: 2026-01-20-guardian-mode-design.md  2026-01-20-guardian-mode.md  2026-01-20-rf-sense-design.md
src/: client.rs  local.rs  main.rs  server.rs  split.rs
src/daemon/: analyzer.rs  avahi.rs  defense.rs  enrich.rs  mod.rs  rpc.rs  state.rs
tests/: guardian_rpc.rs
