[package]
name = "widump"
version = "0.4.1"
authors = ["Aye <aye@maat.is> Hue <hue@maat.is>"]
description = "A tool that only captures what our AI is looking for"
repository = "https://github.com/8b-is/widump"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
keywords = ["mcp", "traffic", "wireshark"]

[dependencies]
ctrlc = "^3"
chrono = "^0"
anyhow = "^1"
tracing = "^0"
pcapture = "^0"
tracing-subscriber = "^0"
clap = { version="^4", features=["derive"] }
pnet = { version = "^0", features = ["serde"] }
serde = { version = "^1", features = ["derive"]}
bincode = { version = "^2", features = ["serde"] }
tokio = { version = "^1", features = ["full"] }
regex = "^1"

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["libpnet"]
libpnet = ["pcapture/pcapng", "pcapture/libpnet"]
libpcap = ["pcapture/pcapng", "pcapture/libpcap"]
